--- a/tsznav/index.html
+++ b/tsznav/index.html
@@ -55,6 +55,9 @@
                                                 <div class="appimg">
                                                     <img :src="item.imgurl" alt="">
                                                 </div>
+                                                <div class="app_bg">
+                                                    <img :src="item.imgurl" alt="">
+                                                </div>
                                                 <div class="app_text">
                                                     <div class="grid-content_title">
                                                         {{item.title}}
@@ -77,6 +80,9 @@
                                         <div class="grid-content ep-bg-purple" :title="`名称：${item.title} &#10;描述：${item.desc}`">
                                             <a :href="item.url" target="_blank">
                                                 <div class="appimg">
+                                                    <img :src="item.imgurl" alt="">
+                                                </div>
+                                                <div class="app_bg">
                                                     <img :src="item.imgurl" alt="">
                                                 </div>
                                                 <div class="app_text">
