--- a/website/cattool/index.html
+++ b/website/cattool/index.html
@@ -42,6 +42,9 @@
                                                 <div class="appimg">
                                                     <img :src="item.imgurl" alt="">
                                                 </div>
+                                                <div class="app_bg">
+                                                    <img :src="item.imgurl" alt="">
+                                                </div>
                                                 <div class="app_text">
                                                     <div class="grid-content_title">
                                                         {{item.title}}
@@ -69,6 +72,9 @@
                                         <div class="grid-content ep-bg-purple" :title="`名称：${item.title} &#10;描述：${item.desc}`">
                                             <a :href="item.url" target="_blank">
                                                 <div class="appimg">
+                                                    <img :src="item.imgurl" alt="">
+                                                </div>
+                                                <div class="app_bg">
                                                     <img :src="item.imgurl" alt="">
                                                 </div>
                                                 <div class="app_text">
@@ -100,6 +106,9 @@
                                                 <div class="appimg">
                                                     <img :src="item.imgurl" alt="">
                                                 </div>
+                                                <div class="app_bg">
+                                                    <img :src="item.imgurl" alt="">
+                                                </div>
                                                 <div class="app_text">
                                                     <div class="grid-content_title">
                                                         {{item.title}}
@@ -127,6 +136,9 @@
                                     <div class="grid-content ep-bg-purple" :title="`名称：${item.title} &#10;描述：${item.desc}`">
                                         <a :href="item.url" target="_blank">
                                             <div class="appimg">
+                                                <img :src="item.imgurl" alt="">
+                                            </div>
+                                            <div class="app_bg">
                                                 <img :src="item.imgurl" alt="">
                                             </div>
                                             <div class="app_text">
@@ -158,6 +170,9 @@
                                                 <div class="appimg">
                                                     <img :src="item.imgurl" alt="">
                                                 </div>
+                                                <div class="app_bg">
+                                                    <img :src="item.imgurl" alt="">
+                                                </div>
                                                 <div class="app_text">
                                                     <div class="grid-content_title">
                                                         {{item.title}}
@@ -185,6 +200,9 @@
                                         <div class="grid-content ep-bg-purple" :title="`名称：${item.title} &#10;描述：${item.desc}`">
                                             <a :href="item.url" target="_blank">
                                                 <div class="appimg">
+                                                    <img :src="item.imgurl" alt="">
+                                                </div>
+                                                <div class="app_bg">
                                                     <img :src="item.imgurl" alt="">
                                                 </div>
                                                 <div class="app_text">
@@ -216,6 +234,9 @@
                                                 <div class="appimg">
                                                     <img :src="item.imgurl" alt="">
                                                 </div>
+                                                <div class="app_bg">
+                                                    <img :src="item.imgurl" alt="">
+                                                </div>
                                                 <div class="app_text">
                                                     <div class="grid-content_title">
                                                         {{item.title}}
@@ -243,6 +264,9 @@
                                         <div class="grid-content ep-bg-purple" :title="`名称：${item.title} &#10;描述：${item.desc}`">
                                             <a :href="item.url" target="_blank">
                                                 <div class="appimg">
+                                                    <img :src="item.imgurl" alt="">
+                                                </div>
+                                                <div class="app_bg">
                                                     <img :src="item.imgurl" alt="">
                                                 </div>
                                                 <div class="app_text">
