--- a/website/tszcloud/index.html
+++ b/website/tszcloud/index.html
@@ -33,10 +33,10 @@
                         <a href=""><li><span>解决方案</span></li></a>
                         <a href=""><li><span>帮助中心</span></li></a>
                         <a href=""><li><span>建议反馈</span></li></a>
-                        <a href=""><li><span>登录</span></li></a>
+                        <a href="https://www.tszcloud.com.cn/login"><li><span>登录</span></li></a>
                     </ul>
                 </div>
-            </div>解决方
+            </div>
         </header>
         <section>
             <div class="t_bannerbox">
